# Software-Dev-MCP

./: .env  .gitignore  LICENSE  README.md  check_imports.py  check_ocr.py  debug_auth.py  docker-compose.yml  filesystem_server.py  implementation_plan_structure.md  llm_test_output.txt  memory_manager.py  orchestrator.py  pyproject.toml  run_backend.bat  run_worker.bat  setup_dev.bat  test_extract_tool.py  test_ingest.py  test_memory_components.py  test_ocr_ingest.py  test_phase5.py  tool_creator.py  tool_definitions.json  tool_indexer.py  verify_backend.py
Notes/: test_note.txt
backend/: debug_output.txt  requirements.txt
backend/app/: celery_app.py  main.py  prompts.py  tasks.py
backend/data/: dummy_tools.json
backend/scripts/: filesystem_server.py  tool_indexer.py  verification_script.py  verify_auto_memory.py  verify_ext_drive.py  verify_folder_ingest.py  verify_graph.py  verify_manual_graph.py  verify_memory_deletion.py  verify_tool_creation_flow.py
backend/tests/: test_auth_flow.py  test_llm.py  test_phase4.py  test_retrieval.py  test_server_manual.py
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-07b1bef4-56c0-45e6-8b3c-481eee757fd9.wt  collection-267b2f7c-c167-4331-ae8e-28409d609cf7.wt  collection-5fc4d30c-3d75-4ed1-990e-0d44dfca2bed.wt  collection-9e080104-4a2a-4c1f-8c05-f83b80963562.wt  (+10 more)
frontend/: package-lock.json  package.json
tools/: calculate_factorial.py  calculator.py  check_health.py  code_search.py  concept_saver.py  create_csv.py  extract_pdf_text.py  extract_text_from_pdf.py  factorial_calc.py  fibonacci.py  fibonacci_calc.py  generate_random_matrix.py  git_tools.py  github_tools.py  journal_keeper.py  listen_to_audio.py  multiply_numbers.py  read_url.py  rhyme_finder.py  run_command.py  setup_test_user.py  speak_text.py  switch_persona.py  time_tracker.py  todo_manager.py  unit_converter.py  vision_analysis.py  weather_checker.py  web_search.py  wiki_info.py  word_associations.py
(+35 files in other folders)
