[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "litellm>=1.80.16",
    "mcp>=1.25.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "duckduckgo-search>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]
