[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.6.2",
    "chromadb>=1.4.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.3",
    "litellm>=1.80.16",
    "mcp>=1.25.0",
    "pinecone-client>=6.0.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
    "duckduckgo-search>=6.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "argon2-cffi>=25.1.0",
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "pyaudio>=0.2.13",
    "PyGithub>=2.1.1",
    "psutil>=5.9.8",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
]
